# mycraft

./: CMakeLists.txt  README.md  idea.txt
inc/: callback.h  gl_program.h  main.h  perlin_noise.h  physics.h  world.h
inc/GLFW/: glfw3.h
inc/glad/: glad.h
src/: callback.cpp  gl_program.cpp  glad.c  main.cpp  perlin_noise.cpp  physics.cpp  world.cpp
src/shader/: cross_fragment_shader.glsl  cross_vertext_shader.glsl  normal_fragment_shader.glsl  normal_vertext_shader.glsl
